# ibrdtn

android/ibrdtn/jni/: build.sh
ibrcommon/: configure.ac
ibrcommon/ibrcommon/: Makefile.am  ibrcommon.h.in
ibrcommon/ibrcommon/net/: Makefile.am  dgramheader.h  socket.h  socketstream.cpp
ibrcommon/ibrcommon/usb/: Makefile.am  usbconnector.cpp  usbconnector.h  usbinterface.cpp  usbinterface.h  usbsocket.cpp  usbsocket.h  usbstream.cpp  usbstream.h
ibrdtn/: README  configure-dev
ibrdtn/daemon/: configure.ac
ibrdtn/daemon/etc/: ibrdtnd.conf
ibrdtn/daemon/m4/: ibrcommon.m4
ibrdtn/daemon/src/: Configuration.cpp  Configuration.h  NativeDaemon.cpp
ibrdtn/daemon/src/api/: ExtendedApiHandler.cpp
ibrdtn/daemon/src/core/: Node.cpp  Node.h
ibrdtn/daemon/src/net/: ConnectionManager.cpp  ConvergenceLayer.h  DiscoveryAgent.cpp  DiscoveryAgent.h  DiscoveryBeaconEvent.cpp  DiscoveryBeaconEvent.h  DiscoveryBeaconHandler.cpp  DiscoveryBeaconHandler.h  DiscoveryService.cpp  IPNDAgent.cpp  IPNDAgent.h  Makefile.am  USBConnection.cpp  USBConnection.h  USBConvergenceLayer.cpp  USBConvergenceLayer.h  USBService.cpp  USBService.h  USBTransferService.cpp  USBTransferService.h
ibrdtn/ibrdtn/: configure.ac
ibrdtn/ibrdtn/ibrdtn/api/: PlainSerializer.cpp
ibrdtn/ibrdtn/ibrdtn/data/: AwurRoutingBlock.cpp  AwurRoutingBlock.h  BlobBlock.h  EID.cpp  ExtensionBlock.cpp  ExtensionBlock.h  Makefile.am  PayloadBlock.cpp  PayloadBlock.h
ibrdtn/tools/: configure.ac
ibrdtn/tools/m4/: ibrcommon.m4
ibrdtn/tools/src/: dtnoutbox.cpp  dtnsend.cpp
(+1 files in other folders)
